--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "format": "prettier --write \"**/*.{html,ts,svelte}\""
   },
   "dependencies": {
     "svelte": "^4.2.8"
@@ -15,6 +16,8 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@tsconfig/svelte": "^5.0.2",
+    "prettier": "^3.8.1",
+    "prettier-plugin-svelte": "^3.4.1",
     "svelte-check": "^3.6.8",
     "svelte-preprocess": "^5.1.3",
     "typescript": "^5.3.3",
